restarted structuring and attempted animation
I was obsessivly 'div'-ing and also tried animation

--- a/index.html
+++ b/index.html
@@ -69,7 +69,31 @@
           </div>
       </div>
   </div>
-</div>   
+</div>
+
+
+<header>
+    <div class="wrapper">
+        <div class="1-6" id="logo"></div>
+        <nav class="1-2">
+            <ul>
+                <li><a>Home</a></li>
+                <li><a>Work</a></li>
+                <li><a>About</a></li>
+            </ul>
+        </nav>
+    </div>
+    <div>
+    	<div class="wrapper">
+        	<p>We <span>design</span> things</p>
+            <p>Lorem ipsum dolor sit amet, indoctum dissentiet eam ne. Eum omnium docendi cu. Aliquid delenit an pri, ad mea nostrud nominavi menandri.</p>
+            <p><a>Hire us</a></p>
+            <p><a>View work</a></p>
+        </div>
+    </div>
+</header>
+
+   
 
 </body>
 </html>
