--- a/index.html
+++ b/index.html
@@ -16,69 +16,9 @@
 
 <body>
 
-
-<!--
-<div class="wrapper">
-	<div class="row">
-        <div class="col-1-2">
-        	<figure>
-            	<img src="img/photo.jpg" alt="Freaky red eyed Owl">
-            	<figcaption>The facebookilous stockerous Owl is a known predator and pervert</figcaption>
-            </figure>
-        </div>
-        <div class="col-1-2">
-        	<div class="red"></div>
-        </div>
-    </div>
-
-
-<div class="wrapper">
-	
-    <div class="row">
-    	<div class="col-1-1">
-			<div class="red">
-            	<div class="col-1-2">
-                	<div class="white">
-                    	 <div class="col-1-3">
-                        	<div class="green"></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-1-2">
-                	<div class="white">
-                    	<div class="col-1-3">
-                        	<div class="green"></div>
-                        </div>
-                        <div class="col-1-3">
-                        	<div class="green"></div>
-                        </div>
-                        <div class="col-1-3">
-                        	<div class="green"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-		</div>
-	</div>     	         
-    
-</div>
-
-<div class="row">
-  <div class="col-1-1">
-      <div class="red">
-          <div class="wrapper">
-              <div class="col-1-1">
-                  <div class="white"></div>
-              </div>
-          </div>
-      </div>
-  </div>
-</div>
--->
-
 <header id="home">
     <div class="wrapper row">
-		<h1><a href="#"><div class="col-1-6" id="logo"></div></a></h1>
+		<div class="col-1-6" id="logo"></div>
         <nav class="col-1-2">
             <ul>
                 <li><a href="#home">Home</a></li>
@@ -90,12 +30,12 @@
     <div class="bg-nightshade" id="hero">
     	<div class="wrapper">
             <div class="col-2-3">
-            	<p>We <span>design</span> things</p>
+            	<h1>We <span>design</span> things</h1>
             	<p>Lorem ipsum dolor sit amet, indoctum dissentiet eam ne. Eum omnium docendi cu. Aliquid delenit an pri, ad mea nostrud nominavi menandri.</p>
             </div>
             <div class="row col-1-2">
-                <div class="col-1-2"><p><a>Hire us</a></p></div>
-                <div class="col-1-2"><p><a>View work</a></p></div>
+                <div class="col-1-2"><p><a href="#about">Hire us</a></p></div>
+                <div class="col-1-2"><p><a href="#work">View work</a></p></div>
             </div>
         </div>
     </div>
@@ -231,7 +171,7 @@
                 <li><a href="#about">About</a></li>
             </ul>
         </nav>
-		<h4><a href="#home"><div class="col-1-6" id="logo-reversed"></div></a></h4>
+		<div class="col-1-6" id="logo-reversed"></div>
         <div class="col-1-12">
         	<p></p>
         </div>
