Editing ex-4 as base

--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
 <div class="wrapper">
 	<div class="row">
         <div class="col-1-2">
-        	<figure>
-            	<img src="img/photo.jpg" alt="Freaky blue eyed Owl">
-            </figure>
+   			<div class="blue"></div>
         </div>
         <div class="col-1-2">
         	<div class="blue"></div>
