Ok, I take it back, they're pretty cool
-Fixed previously placed css shapes
-Added missing css shapes on the right
-Fine tuned sizes and distances
TO DO:
-Clean CSS
-Refine typography
-Fix H1~logo dispute and consequential chain
-change hero buttons into list
-Change shape naming convention
-Address tag
-background-images
-mobilify

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 <div id="work">    
     <div class="bg-lunar-dust">
     <div class="base-l"></div>
+    <div class="rhombus-r"></div>
     	<section class="wrapper">
         	<div class="col-1-3 align-cntr txt-r">
             	<header>
@@ -71,6 +72,7 @@
     
      <div class="bg-lunar-dust">
      <div class="base-l"></div>
+     <div class="rhombus-r"></div>
     	<section class="wrapper ">
         	<div class="col-1-3 align-cntr txt-r">
             	<header>
